# obsankipy

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
00/: _get_admin_rights.bat
00-windows/: 00-installs.bat  00-python-freeze.bat  README.md  requirements-all.txt  requirements.txt  run-test.bat  test-delete-file-hashes.bat
examples/: styles.css
examples/vault/: Basic Tests.md  admonition.md  onlyheader.md  second test file.md  singleankitest.md  test file.md
examples/vault/.obsankipy/: .vault_file_hashes.json  config.yaml
examples/vault/Medias/: diffekv.md
src/: config_parser.py  files.py  media.py  obsankipy.py  run.py  vault.py
src/anki/: manager.py  requests.py  utils.py
src/notes/: fields.py  manager.py  note.py
src/notes/transformers/: fields.py  utils.py
src/utils/: constants.py  helpers.py  patterns.py
