[tool.poetry]
name = "obsankipy"
version = "0.1.0"
description = ""
authors = ["Lua <mlcivilengineer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.1"
markdown = "^3.5.1"
pygments = "^2.17.2"
requests = "^2.31.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
